--- a/Form.html
+++ b/Form.html
@@ -2,13 +2,19 @@
     <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+            <input value="someone@nowhere.com" class="validate[required,custom[email]]" type="text" name="email" id="email" />
         </div>
     </div>
     <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">Name</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" placeholder="name">
+            <input value="2010-12-01" class="validate[required,custom[date]]" type="text" name="date" id="date" />
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Name</label>
+        <div class="col-sm-10">
+            <input value="too many spaces obviously" class="validate[required,custom[onlyLetterNumber]]" type="text" name="special" id="special" />
         </div>
     </div>
     <div class="form-group">
@@ -16,4 +22,7 @@
             <button type="submit" class="btn btn-default">Save</button>
         </div>
     </div>
+
+
+
 </form>
